--- a/package.json
+++ b/package.json
@@ -4,29 +4,30 @@
 	"description": "阅读流畅性实验平台",
 	"type": "module",
 	"scripts": {
-	  "dev": "vite",
-	  "build": "vite build",
-	  "preview": "vite preview",
-	  "start:server": "node server.js",
-	  "start": "concurrently \"npm run dev\" \"npm run start:server\"",
-	  "init": "mkdir -p src/components public server",
-	  "setup": "npm run init && npm install"
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"start:server": "node server.js",
+		"start": "concurrently \"npm run dev\" \"npm run start:server\"",
+		"init": "mkdir -p src/components public server",
+		"setup": "npm run init && npm install"
 	},
 	"dependencies": {
-	  "jspsych": "^8.2.1",
-	  "@jspsych/plugin-html-keyboard-response": "^1.1.2",
-	  "@jspsych/plugin-html-button-response": "^1.1.2",
-	  "vue": "^3.3.4",
-	  "vue-router": "^4.2.4",
-	  "element-plus": "^2.3.8",
-	  "express": "^4.18.2",
-	  "mongoose": "^7.4.1",
-	  "cors": "^2.8.5",
-	  "csv-parse": "^5.4.0"
+		"@element-plus/icons-vue": "^2.3.1",
+		"@jspsych/plugin-html-button-response": "^1.1.2",
+		"@jspsych/plugin-html-keyboard-response": "^1.1.2",
+		"cors": "^2.8.5",
+		"csv-parse": "^5.4.0",
+		"element-plus": "^2.3.8",
+		"express": "^4.18.2",
+		"jspsych": "^8.2.1",
+		"mongoose": "^7.4.1",
+		"vue": "^3.3.4",
+		"vue-router": "^4.2.4"
 	},
 	"devDependencies": {
-	  "@vitejs/plugin-vue": "^4.2.3",
-	  "concurrently": "^8.2.0",
-	  "vite": "^4.4.9"
+		"@vitejs/plugin-vue": "^4.2.3",
+		"concurrently": "^8.2.0",
+		"vite": "^4.4.9"
 	}
-  }
+}
