--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview",
-		"start:server": "node server.js",
+		"start:server": "cd backend && python main.py",
 		"start": "concurrently \"npm run dev\" \"npm run start:server\"",
 		"init": "mkdir -p src/components public server",
 		"setup": "npm run init && npm install"
