claude未完成的计算部分的修改

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ lerna-debug.log*
 *.zip
 *.json
 *.csv
-
+combined_code.txt
 ise-demo/example/**
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
