--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ ise-demo/example/**
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
+xml_analysis_results/**
 # Runtime data
 pids
 *.pid
