--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "requests>=2.32.4",
     "python-docx>=1.2.0",
     "pillow>=11.3.0",
+    "websockets>=15.0.1",
 ]
 
 [project.optional-dependencies]
