--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,9 @@ lerna-debug.log*
 # *.csv
 combined_code.txt
 ise-demo/example/**
-
+*.webm
+*.wav
+*.mp3
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 xml_analysis_results/**
