--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"element-plus": "^2.3.8",
 		"express": "^4.18.2",
 		"jspsych": "^8.2.1",
+		"lamejs": "^1.2.1",
 		"mongoose": "^7.4.1",
 		"vue": "^3.3.4",
 		"vue-router": "^4.2.4"
