--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 		"express": "^4.18.2",
 		"jspsych": "^8.2.1",
 		"lamejs": "^1.2.1",
+		"mic-recorder-to-mp3": "^2.2.2",
 		"mongoose": "^7.4.1",
+		"vmsg": "^0.4.0",
 		"vue": "^3.3.4",
 		"vue-router": "^4.2.4"
 	},
