--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ ise-demo/example/**
 backend/uploads/**
 *.webm
 *.wav
-*.mp3
+*.jpg
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 xml_analysis_results/**
